--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "query-string-v7": "yarn:query-string@7.1.3",
     "vite": "^5.1.4"
   }
 }
