--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@reduxjs/toolkit": "^2.2.2",
+    "firebase": "^10.9.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "6",
     "whatwg-fetch": "^3.6.20"
   },
