--- a/.env.test
+++ b/.env.test
@@ -1,10 +1,10 @@
-FIREBASE_APP_ID=1:330528623149:web:70466853250ea4b10f46a4
-FIREBASE_API_KEY=AIzaSyDmLePcJE4qmu0Q9vuKvLMRssCQCIba6uY
-FIREBASE_AUTH_DOMAIN=vocabulary-app-57969.firebaseapp.com
-FIREBASE_STORAGE_BUCKET=vocabulary-app-57969.appspot.com
+FIREBASE_APP_ID= 
+FIREBASE_API_KEY= 
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_STORAGE_BUCKET= 
 
-CLOUDINARY_PUBLIC_UPLOAD=https://api.cloudinary.com/v1_1/dvd-udemy/upload
-CLOUDINARY_PROJECT=vocabulary-app
-CLOUDINARY_NAME=dvd-udemy
-CLOUDINARY_KEY=737828111861615
-CLOUDINARY_SECRET=-o-ZOk58AL368CvlOkwUdIasIqo
+CLOUDINARY_PUBLIC_UPLOAD= 
+CLOUDINARY_PROJECT=
+CLOUDINARY_NAME= 
+CLOUDINARY_KEY= 
+CLOUDINARY_SECRET= 
